--- a/gb/20/4/14/n12031235.md
+++ b/gb/20/4/14/n12031235.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dhila2243/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dhila2243/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dhila2243/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dhila2243/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dhila2243/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dhila2243/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dhila2243/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dhila2243/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dhila2243/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dhila2243/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dhila2243/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dhila2243/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dhila2243/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【法国疫情4.14】教育界对解封学校疑问多</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-1207491225-600x400.jpg" />
 <h6>法国自3月17日全国禁足，学校关闭，1200万中小学生在家中通过网络远程上课。图为一位法国妈妈在辅导孩子们功课。  (SEBASTIEN BOZON/AFP via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年04月15日讯】（大纪元记者启心、林丽霞法国报道）4月14日（周二），法国中共肺炎（武汉肺炎）重症病患连续第五天减少，这是法国政府用以判断<ahref="https://github.com/dhila2243/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>策略的一个指数之一。昨日总统马克龙宣布，全国禁足延长至5月11日后，初等教育<ahref="https://github.com/dhila2243/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>将逐步重新开放，教育界和父母们对此疑问重重。</p>
-<p>马克龙在13日的讲话中表示，禁足对于众多无网络和数码设备条件的家庭来说，学生接受教育大受影响，所以需逐步让学生重返<ahref="https://github.com/dhila2243/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>。</p>
-<p>隔日，法国舆论纷纷表示对马克龙宣布重新开放学校感到“十分意外”。法国小学第一工会（Snuipp-FSU）秘书长Francette Popineau向法新社表示，学校是一个高传染性地方，仍缺乏防护，相对其它公共场所如电影院、剧院均将关闭至7月份，“这似乎显得很矛盾”。</p>
-<p>克里斯托夫·卡斯塔纳（Christophe Castaner）通过France Inter电台谨慎回应说，“总统是公布要禁足至5月11日”，至于<ahref="https://github.com/dhila2243/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>，那还只是个“目标”。</p>
-<p>截至4月14日，法国确诊人数破十万达103573人（24小时内新增5497例），死亡人数15729人（24小时内新增死亡人数559人），重症患者6730人。</p>
+<p>【大纪元2020年04月15日讯】（大纪元记者启心、林丽霞法国报导）4月14日（周二），法国中共肺炎（武汉肺炎）重症病患连续第五天减少，这是法国政府用以判断<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>策略的一个指数之一。昨日总统马克龙宣布，全国禁足延长至5月11日后，初等教育<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>将逐步重新开放，教育界和父母们对此疑问重重。</p>
+<p>马克龙在13日的讲话中表示，禁足对于众多无网络和数码设备条件的家庭来说，学生接受教育大受影响，所以需逐步让学生重返<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>。</p>
+<p>隔日，法国舆论纷纷表示对马克龙宣布重新开放学校感到“十分意外”。法国小学第一工会（Snuipp-FSU）秘书长弗朗西特·波皮诺（Francette Popineau）向法新社表示，学校是一个高传染性地方，仍缺乏防护，相对其它公共场所如电影院、剧院均将关闭至7月份，“这似乎显得很矛盾”。</p>
+<p>内政部长克里斯托夫·卡斯塔纳（Christophe Castaner）通过France Inter电台谨慎回应说，“总统是公布要禁足至5月11日”，至于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>，那还只是个“目标”。</p>
+<p>截至4月14日，法国确诊人数破十万达103,573人（24小时内新增5497例），死亡人数15,729人（24小时内新增死亡人数559人），重症患者6730人。</p>
 </p>
 <p>&nbsp;</p>
 <div class="flourish-embed flourish-chart" data-src="visualisation/1706435"><a src="https://public.flourish.studio/resources/embed.js"></a></div>
 <p>
-<p>全法国感染<ahref="https://github.com/dhila2243/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>数据：<ahref=><a href="https://github.com/dhila2243/djy/blob/master/gb/20/3/19/n11955323.md#1">查看</a></p>
+<p>全法国感染<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>数据：<ahref=><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11955323.md#1">查看</a></p>
 <h2>全法约有15万家企业收到政府担保的贷款</h2>
 <p>4月14日，法国公共投资银行行长尼古拉斯·杜福克表示，目前约有15万家法国企业已经使用由政府担保的贷款， 来应对由疫情引起的周转资金困难。</p>
 <p>杜福克说：“截止到上周六晚（4月11日），这些约15万家企业共贷款项220亿欧元。 目前仍有400亿欧元的贷款请求正在进行处理。 ”杜福克表示，政府的担保起了很重要的作用，整个贷款程序非常迅速。</p>
@@ -24,56 +24,62 @@
 <p>在一份联合新闻稿中，法国制药集团赛诺菲和英国葛兰素史克集团的研发部门宣布将联手开发，用于抵御中共肺炎的疫苗。</p>
 <p>据悉，首批研发的疫苗将于2020年夏季进行临床试验，如果试验成功，将于2021年第二季度开始发行。</p>
 <h2>面对疫情危机 欧盟将准备1.5兆欧元的借贷</h2>
-<p>欧盟委员会执行副主席， 拉脱维亚裔的瓦尔迪斯·东布罗夫斯基斯透露，为应对疫情危机以及重建疫情过后的欧洲经济， 欧盟正准备1万5千亿欧元的预算，但目前并没有完全决定下来，需等待下一次欧洲峰会做决定。</p>
+<p>欧盟委员会执行副主席、 拉脱维亚裔的瓦尔迪斯·东布罗夫斯基斯透露，为应对疫情危机以及重建疫情过后的欧洲经济， 欧盟正准备1万5千亿欧元的预算，但目前并没有完全决定下来，需等待下一次欧洲峰会做决定。</p>
 <h2>全球大债权国达成协议对贫穷国家暂停征收债务</h2>
 <p>法国经济部长布鲁诺·勒梅尔宣布，全球主要的大债权国已经达成协议，全球疫情危机前，对最贫穷的国家暂停征收债务。</p>
-<p>据LCI电视消息，总统马克龙将于3月15日（周三）早上8h30接受RFI电台采访，谈及取消非洲债务，和非洲疫情“紧急性支援”等话题。</p>
+<p>据LCI电视消息，总统马克龙将于4月15日（周三）早上8h30接受RFI电台采访，谈及取消非洲债务，和非洲疫情“紧急性支援”等话题。</p>
 <p>勒梅尔表示，绝大多数的非洲国家都将成为受益国。</p>
 <h2>法国医生联盟对5月11日重新开学表示担忧</h2>
-<p>4月13日晚， 法国总统马克龙宣布将全国禁闭期延迟到5月11日，法国医生联盟对这一决定表示赞成。然而对于准步重新开放幼儿园和中小学校的决定，医生联盟对此表示深切担忧。</p>
+<p>4月13日晚， 法国总统马克龙宣布将全国禁闭期延迟到5月11日，法国医生联盟对这一决定表示赞成。然而对于准备重新开放幼儿园和中小学校的决定，医生联盟对此表示深切担忧。</p>
 <h2>法国内政部长：不确定5月11日开始解禁，那是一个目标</h2>
-<p>内政部长克里斯朵夫·卡斯塔讷尔接受France Inter电台采访表示，对4月13日晚总统的讲话给予部分澄清，“总统宣布的禁闭延期会持续到5月11日，并不是5月11日起会解除禁闭。如果5月11日起开始解除禁闭，我们必须有充分可行的条件。这是一个目标，而非确定。”</p>
-<p>责任编辑：孙平</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>内政部长克里斯托夫·卡斯塔纳接受France Inter电台采访表示，对4月13日晚总统的讲话给予部分澄清，“总统宣布的禁闭延期会持续到5月11日，并不是5月11日起会解除禁闭。如果5月11日起开始解除禁闭，我们必须有充分可行的条件。这是一个目标，而非确定。”</p>
+<p>责任编辑：孙平#</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/10/n12020292.md#1">法国戴高乐航母50海员染疫 感染原因不明</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/10/n12021458.md#1">【法国疫情4.10】369名军人确诊染疫</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/11/n12023338.md#1">【法国疫情4.11】首位10岁以下儿童死亡</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12025578.md#1">【法国疫情4.12】复活节小兔戴上了口罩</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12026871.md#1">组图：法国航空母舰50人染疫 紧急返航</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12027315.md#1">法国《费加罗报》揭中共怎样操控国际社会</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12028270.md#1">马克龙宣布法国再禁足4周 之后策略性解封</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12020292.md#1">法国戴高乐航母50海员染疫 感染原因不明</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/10/n12021458.md#1">【法国疫情4.10】369名军人确诊染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/11/n12023338.md#1">【法国疫情4.11】首位10岁以下儿童死亡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/13/n12025578.md#1">【法国疫情4.12】复活节小兔戴上了口罩</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/13/n12026871.md#1">组图：法国航空母舰50人染疫 紧急返航</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/13/n12027315.md#1">法国《费加罗报》揭中共怎样操控国际社会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/13/n12028270.md#1">马克龙宣布法国再禁足4周 之后策略性解封</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/1/n12852157.md#1">法国面临第三波疫情高峰 全国再封锁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/14/n12687488.md#1">【疫情1·14】法国周六起实施全国宵禁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/21/n12635074.md#1">组图：疫情下巴黎城圣诞灯饰添节庆氛围</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11100959.md#1" target="_blank">共产暴政录：唐山大地震前后之怪相</a></li><li><a href="https://github.com/dhila2243/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/30/n9338788.md#1" target="_blank">一张10年前的病历让湖北仙桃拘留所放人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/23/n2974541.md#1" target="_blank">鲜为人知的马克思之五：自私的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2095376.md#1" target="_blank">法轮功中南海事件真相揭秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12025599.md#1">【拍案惊奇】中共军队频动作 传习近平或麻烦了</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12027648.md#1">大陆民企现状：工厂机器被砸 失业者人山人海</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12027860.md#1">【新闻看点】3000万人恐失业 北京遇4大挑战</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12027427.md#1">怎么测都不超37度 陆媒卧底测温枪交易群</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12026823.md#1">中领馆给美国州议长发私信求表扬 被骂脑残</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/11/n12023271.md#1">否认台湾曾警示病毒人传人 谭德塞遭艺人呛爆</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/12/n12023872.md#1">澳洲小狗故意贴地走路 嘲弄腿短的同伴</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/12/n12025294.md#1">不爽台湾被抹黑 洋女婿吴凤吁联署罢免谭德塞</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12025668.md#1">何妤玟惊曝年初离婚 自认不适合再当对方太太</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12027681.md#1">杨超越塞脏纸巾给助理 被批耍大牌没素质</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/12/n12023749.md#1">民调：近半美国人认为 这波疫情是神的警示</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12027357.md#1">隔离带小孩好累 治疗师荐3游戏 孩子不再喊无聊</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/12/n12024552.md#1">古今传奇：天门为何人开启</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/13/n12026626.md#1">意男高音献唱“希望的音乐” 网上千万人看</a></li>
-<li><a href="https://github.com/dhila2243/djy/blob/master/gb/20/4/6/n12007147.md#1">糟老头和流浪汉偶露仙术  不留踪影在人间</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674840.md#1">【美食天堂】鲜虾肠粉做法～完美比例配方！</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dhila2243/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dhila2243/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/14/n12031235.htm">【法国疫情4.14】教育界对解封学校疑问多</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/14/n12031235.htm">【法国疫情4.14】教育界对解封学校疑问多</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dhila2243/djy/blob/master/gb/20/4/14/n12031235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dhila2243/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dhila2243/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dhila2243/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dhila2243/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dhila2243/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/4/14/n12031235.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
